added russian translation

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -6,6 +6,93 @@
   "REGISTER": "РЕГИСТРАЦИЯ",
   "Settings": "Настройки",
   "Logout": "Выход",
+  "Reader": "Ридер",
+  "Read Together": "Читаем вместе",
+  "My Texts": "Мои тексты",
+  "Add text": "Добавить текст",
+  "Words": "Слова",
+  "My words": "Мои слова",
+  "My texts": "Мои тексты",
+  "Text language": "Язык текста",
+  "Translate to": "Переводить на",
+  "Symbols": "Символы",
+  "Unique words": "Уникальные слова",
+  "Known words": "Знакомые слова",
+  "Unknown Words": "Незнакомые слова",
+  "Pages": "Страницы",
+  "Current page": "Текущая страница",
+  "Read": "Читать",
+  "Full Info": "Статистика",
+  "Edit": "Редактировать",
+  "Delete": "Удалить",
+  "Save": "Сохранить",
+  "Title": "Заголовок",
+  "EDIT TEXT": "РЕДАКТИРОВАТЬ ТЕКСТ",
+  "Upload text file": "Загрузить файл",
+  "Allowed file types": "Допустимые типы файлов",
+  "File": "Файл",
+  "Choose file": "Выберите файл",
+  "UPLOAD": "ЗАГРУЗИТЬ",
+  "Text": "Текст",
+  "Or add plain text": "Или просто текст",
+  "Words language": "Язык слов",
+  "Translation language": "Язык перевода",
+  "ALL": "ВСЕ",
+  "TO STUDY": "ИЗУЧИТЬ",
+  "KNOWN": "ЗНАКОМЫЕ",
+  "State": "Статус",
+  "Word": "Слово",
+  "Translation": "Перевод",
+  "Stats": "Статистика",
+  "Total words": "Всего слов",
+  "UNKNOWN": "НЕЗНАКОМЫЕ",
+  "Usage frequency": "Частота использования",
+  "Click on buttons to filter words": "Нажимайте на кнопки ниже чтобы фильтровать слова",
+  "Known": "Знакомое",
+  "To study": "Изучить",
+  "Questions": "Вопросы",
+  "Users": "Пользователи",
+  "FILTER": "ФИЛЬТРОВАТЬ",
+  "I want to learn": "Я хочу изучить",
+  "I know": "Я знаю",
+  "Public texts": "Публичные тексты",
+  "Find text": "Найти текст",
+  "My questions": "Мои вопросы",
+  "Click to translate": "Кликните на слово для перевода",
+  "to study words": "изучаемые слова",
+  "unknown words": "незнакомые слова",
+  "Options": "Настройки",
+  "Highlight to study words": "Выделать изучаемые слова",
+  "Highlight unknown words": "Выделять незнакомые слова",
+  "Other": "Остальное",
+  "Select text and press": "Выделите текст и нажмите",
+  "to translate selected text in Google Translate": "чтобы перевести выбранный текст в Google Translate",
+  "Ask question": "Задать вопрос",
+  "Unique words on this page": "Уникальные слова на этой странице",
+  "known words": "знакомые слова",
+  "Translate in Google": "Перевести в Google",
+  "Translate in Yandex": "Перевести в Yandex",
+  "Mark this word as known": "Изменить статус слова на \"знакомое\"",
+  "word translation": "перевод слова",
+  "Question language (your native language)": "Язык вопроса (ваш родной язык)",
+  "Question about language (language you learn)": "Язык о вопросе (язык который вы изучаете)",
+  "Send": "Отправить",
+  "Question": "Вопрос",
+  "views": "просмотров",
+  "answers": "ответов",
+  "All questions": "Все вопросы",
+  "Your answer": "Ваш ответ",
+  "Login to add answer": "Авторизуйтесь чтобы добавить ответ",
+  "Add": "Добавить",
+  "Edit question": "Редактировать вопрос",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
   "": "",
   "": ""
+
 }
