--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -125,21 +125,9 @@
     "Questions are available on each text page": "На каждой странице текста доступны вопросы",
     "You can create questions about the text and answer questions from other users": "Вы можете создавать вопросы по тексту и отвечать на вопросу других пользователей",
     "The question is attached to the current page of the text, so everyone who read the text will see your question": "Вопрос привязывается в текущей странице текста, поэтому все, кто будет читать текст, увидят ваш вопрос",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": "",
-    "": ""
+
+
+    "WexLang, wexlang, language learning, q and a, foreign language, foreign": "WexLang, wexlang, изучение языков, вопросы, ответы, иностранные языки, английский",
+    "Interesting questions about learning foreign languages on WexLang.com": "Интересные вопросы по изучению иностранных языков - WexLang.com"
+
 }
