--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -86,6 +86,14 @@
     "Edit question": "Редактировать вопрос",
 
 
+    "E-Mail Address": "E-Mail Адрес",
+    "Name": "Имя",
+    "Password": "Пароль",
+    "Confirm Password": "Подтвердите пароль",
+    "Remember Me": "Запомнить меня",
+    "Login": "Логин",
+    "Register": "Регистрация",
+    "Read more": "Узнать больше",
     "Learn a language by reading whatever you like": "Изучайте иностранные языки, читая то, что вам нравится",
     "Read books in original language": "В оригинале",
     "Without being distracted by a dictionary": "Не отвлекаясь на словарь",
@@ -111,7 +119,7 @@
     "Here you can see all unique words on the current text page": "Здесь вы можете посмотреть все уникальные слова на текущей странице текста",
     "Mark known words and words you need to learn": "Отметить знакомые слова и слова которые нужно изучить",
     "Community": "Сообщество",
-    "Сan not understand the meaning of the sentence, despite the fact that you know or translated all the words": "Не можете понять смысл предложения, несмотря на то что знаете или перевели все слова",
+    "Сan not understand the meaning of the sentence, despite the fact that you know or translated all the words": "Не можете понять смысл предложения, несмотря на то, что знаете или перевели все слова",
     "Then welcome to": "Тогда добро пожаловать в",
     "Questions & Answers": "Вопросы и Ответы",
     "Ask questions and help other users to learn foreign languages": "Задавайте вопросы и помогайте другим пользователям в изучении иностранных языков",
