--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -1,141 +1,100 @@
 {
-    "READER": "РИДЕР",
-    "Q & A": "ВОПРОСЫ",
-    "LOGIN": "ЛОГИН",
-    "REGISTER": "РЕГИСТРАЦИЯ",
-    "Settings": "Настройки",
-    "Logout": "Выход",
-    "Reader": "Ридер",
-    "Read Together": "Читаем вместе",
-    "My Texts": "Мои тексты",
-    "Add text": "Добавить текст",
-    "Words": "Слова",
-    "My words": "Мои слова",
-    "My texts": "Мои тексты",
-    "Text language": "Язык текста",
-    "Translate to": "Переводить на",
-    "Symbols": "Символы",
-    "Unique words": "Уникальные слова",
-    "Known words": "Знакомые слова",
-    "Unknown Words": "Незнакомые слова",
-    "Pages": "Страницы",
-    "Current page": "Текущая страница",
-    "Read": "Читать",
-    "Full Info": "Статистика",
-    "Edit": "Редактировать",
-    "Delete": "Удалить",
-    "Save": "Сохранить",
-    "Title": "Заголовок",
-    "EDIT TEXT": "РЕДАКТИРОВАТЬ ТЕКСТ",
-    "Upload text file": "Загрузить файл",
-    "Allowed file types": "Допустимые типы файлов",
+    "Title": "Название текста",
     "File": "Файл",
     "Choose file": "Выберите файл",
     "UPLOAD": "ЗАГРУЗИТЬ",
     "Text": "Текст",
-    "Or add plain text": "Или просто текст",
-    "Words language": "Язык слов",
-    "Translation language": "Язык перевода",
-    "ALL": "ВСЕ",
-    "TO STUDY": "ИЗУЧИТЬ",
-    "KNOWN": "ЗНАКОМЫЕ",
+    "Upload file": "Загрузить файл",
+    "Or add plain text": "Или просто добавить текст",
+    "Allowed file types": "Допустимые форматы",
+
+    "My texts": "Мои тексты",
+    "Total words": "Всего слов",
+    "Unique words": "Уникальные",
+    "Unknown Words": "Незнакомые",
+    "To study words": "Изучаемые",
+    "Known words": "Знакомые",
+    "Total Pages": "Всего страниц",
+    "Current page": "Текущая страница",
+    "Read": "Читать",
+    "Text stats": "Статистика",
+    "Edit": "Настройки",
+    "Delete": "Удалить",
+    "EDIT TEXT": "НАСТРОЙКИ ТЕКСТА",
+    "Save": "Сохранить",
+
+    "My words": "Мои слова",
+    "Add text": "Добавить текст",
+    "Upload dictionary": "Загрузить словарь",
+    "Settings": "Настройки",
+    "Feedback": "Обратная связь",
+
+    "To study": "Изучить",
+    "Known": "Знакомое",
+    "Add new word": "Добавить новое слово",
+    "ADD": "ДОБАВИТЬ",
+    "word": "слово",
+    "translation": "перевод",
+    "Find": "Найти",
+    "Search": "Поиск",
+    "Reset": "Сброс",
+    "EXPORT ALL AS": "ЭКСПОРТИРОВАТЬ ВСЕ КАК",
+    "Delete all words": "Удалить все слова",
+    "Export": "Экспорт",
+    "All": "Все",
     "State": "Статус",
     "Word": "Слово",
     "Translation": "Перевод",
-    "Stats": "Статистика",
-    "Total words": "Всего слов",
-    "UNKNOWN": "НЕЗНАКОМЫЕ",
+    "Delete word": "Удалить слово",
+
+    "Allowed file type": "Допустимый тип файла",
+    "Allowed format": "Допустимый формат",
+    "State: 0 - new, 1 - to study, 2 - known": "Статус: 0 - новое, 1 - изучить, 2 - знакомое",
+    "You may upload explanatory dictionary": "Вы можете загрузить толковый словарь",
+    "First row (headers) is skipped": "Первая строка(заголовки) пропускается",
+
+    "Text statistics": "Статистика текста",
+    "Text words": "Слова из текста",
+    "Unique words ": "Уникальные слова",
+    "Symbols": "Символы",
+    "Pages": "Страницы",
     "Usage frequency": "Частота использования",
-    "Click on buttons to filter words": "Нажимайте на кнопки ниже чтобы фильтровать слова",
-    "Known": "Знакомое",
-    "To study": "Изучить",
-    "Questions": "Вопросы",
-    "Users": "Пользователи",
-    "FILTER": "ФИЛЬТРОВАТЬ",
-    "I want to learn": "Я хочу изучить",
-    "I know": "Я знаю",
-    "Public texts": "Публичные тексты",
-    "Find text": "Найти текст",
-    "My questions": "Мои вопросы",
-    "Click to translate": "Кликните на слово для перевода",
+    "UNKNOWN": "НОВЫЕ",
+    "KNOWN / TO STUDY": "ЗНАКОМЫЕ / ИЗУЧИТЬ",
+
+    "Interface language": "Язык интерфейса",
+    "Russian": "Русский",
+    "Language I know": "Родной язык",
+    "Language I learn": "Изучаемый язык",
+    "Use free google translate api": "Использовать бесплатный google переводчик",
+    "Yes": "Да",
+    "No, use official google translate API": "Нет, использовать официальный google translate API",
+
+    "Words": "Слова",
+    "Click to translate": "Нажмите на слово для перевода",
+    "known words": "знакомые слова",
     "to study words": "изучаемые слова",
     "unknown words": "незнакомые слова",
-    "Options": "Настройки",
-    "Highlight to study words": "Выделать изучаемые слова",
-    "Highlight unknown words": "Выделять незнакомые слова",
-    "Other": "Остальное",
-    "Select text and press": "Выделите текст и нажмите",
-    "to translate selected text in Google Translate": "чтобы перевести выбранный текст в Google Translate",
-    "Ask question": "Задать вопрос",
-    "Unique words on this page": "Уникальные слова на этой странице",
-    "known words": "знакомые слова",
-    "Translate in Google": "Перевести в Google",
+    "Options": "Опции",
+    "Highlight to study words": "Выделить изучаемые слова",
+    "Highlight unknown words": "Выделить незнакомые слова",
     "Translate in Yandex": "Перевести в Yandex",
-    "Mark this word as known": "Изменить статус слова на \"знакомое\"",
-    "word translation": "перевод слова",
-    "Question language (your native language)": "Язык вопроса (ваш родной язык)",
-    "Question about language (language you learn)": "Язык о вопросе (язык который вы изучаете)",
-    "Send": "Отправить",
-    "Question": "Вопрос",
-    "views": "просмотров",
-    "answers": "ответов",
-    "All questions": "Все вопросы",
-    "Your answer": "Ваш ответ",
-    "Login to add answer": "Авторизуйтесь чтобы добавить ответ",
-    "Add": "Добавить",
-    "Edit question": "Редактировать вопрос",
+    "Translate in Google": "Перевести в Google",
+    "Save Translation": "Сохранить перевод",
+    "Mark all as TO STUDY": "Отметить все как ИЗУЧАЕМОЕ",
+    "Mark all as KNOWN": "Отметить все как ЗНАКОМОЕ",
+    "Mark this word as": "Отметить слово как",
+    "New words get \"To study\" state by default": "Значение по умолчанию - Изучить",
+    "Unique words on this page": "Уникальные слова на этой странице",
 
+    "Do you have any suggestions or questions? Or maybe you've found a bug?": "У вас есть интересные предложения или вопросы? Или может вы нашли баг?",
+    "Send me an email then": "Тогда отправьте мне письмо",
 
-    "E-Mail Address": "E-Mail Адрес",
-    "Name": "Имя",
-    "Password": "Пароль",
-    "Confirm Password": "Подтвердите пароль",
-    "Remember Me": "Запомнить меня",
-    "Login": "Логин",
-    "Register": "Регистрация",
-    "Read more": "Узнать больше",
-    "Learn a language by reading whatever you like": "Изучайте иностранные языки, читая то, что вам нравится",
-    "Read books in original language": "В оригинале",
-    "Without being distracted by a dictionary": "Не отвлекаясь на словарь",
-    "17 languages": "17 языков",
-    "and any translation directions are available in the beta version": "и любые направления перевода в beta версии",
-    "More than": "Более",
-    "100 languages": "100 языков",
-    "will be available after beta-testing": "будет доступно после бета-тестирования",
-    "How it works": "Как это работает",
-    "You upload a text to the site": "Вы загружаете текст на сайт",
-    "Uploaded text is analyzed according to your dictionary and you get full text statistics - how many words there are": "Загруженный текст анализируется с учетом вашего словаря и вы получаете полную статистику по тексту - сколько всего слов",
-    "how many known and unknown words": "сколько знакомых и незнакомых слов",
-    "READER ": "РИДЕР / ЧИТАЛКА ТЕКСТОВ",
-    "After uploading a text, you can start reading": "После загрузки текста вы можете приступить к чтению",
-    "You can translate words directly in the text": "Можно переводить слова прямо в тексте",
-    "New words are highlighted in blue": "Новые слова выделены синим цветом",
-    "\"To study\" words are highlighted in beige": "Слова к изучению выделены бежевым цветом",
-    "Known words are not highlighted": "Знакомые слова никак не выделяются в тексте",
-    "Words highlighting can be turned off": "Выделение слов можно отключить",
-    "Additional translation is available via Google Translate and Yandex Translate": "Доступен дополнительный перевод через Google Translate и Yandex Translate",
-    "You can select several sentences or the entire text at once and translate it in Google Translate": "Можно выделить сразу несколько предложений или весь текст и перевести в Google Translate",
-    "Also words statistics is available for each page of text": "Также для каждой страницы текста доступна статистика по словам",
-    "Here you can see all unique words on the current text page": "Здесь вы можете посмотреть все уникальные слова на текущей странице текста",
-    "Mark known words and words you need to learn": "Отметить знакомые слова и слова которые нужно изучить",
-    "Community": "Сообщество",
-    "Сan not understand the meaning of the sentence, despite the fact that you know or translated all the words": "Не можете понять смысл предложения, несмотря на то, что знаете или перевели все слова",
-    "Then welcome to": "Тогда добро пожаловать в",
-    "Questions & Answers": "Вопросы и Ответы",
-    "Ask questions and help other users to learn foreign languages": "Задавайте вопросы и помогайте другим пользователям в изучении иностранных языков",
+    "If you are using free google API, google may block your IP because it's not actually free and there are limits.":
+    "Если вы используете бесплатный перевод, google может заблокировать ваш IP, так как первод на самом деле не совсем бесплатный и есть лимиты.",
 
+    "To avoid this do not use \"Mark all words as\" function too often.": "Чтобы избежать блокировки не используйте кнопки  \"Отметить все слова как\" слишком часто.",
 
-    "Read foreign language books together": "Читайте книги на иностранном языке вместе",
-    "Help each other with understanding and learning a foreign language": "Помогайте друг другу с пониманием и изучением иностранного языка",
-    "You create public text by uploading text to the site": "Вы создаете публичный текст загружая текст на сайт",
-    "Uploaded text becomes available to everyone": "Загруженный текст становится доступен всем",
-    "Anyone can join the group to read the selected text": "Все желающие могут вступить в группу для чтения выбранного текста",
-    "Questions are available on each text page": "На каждой странице текста доступны вопросы",
-    "You can create questions about the text and answer questions from other users": "Вы можете создавать вопросы по тексту и отвечать на вопросу других пользователей",
-    "The question is attached to the current page of the text, so everyone who read the text will see your question": "Вопрос привязывается в текущей странице текста, поэтому все, кто будет читать текст, увидят ваш вопрос",
-
-
-    "WexLang, wexlang, language learning, q and a, foreign language, foreign": "WexLang, wexlang, изучение языков, вопросы, ответы, иностранные языки, английский",
-    "Interesting questions about learning foreign languages on WexLang.com": "Интересные вопросы по изучению иностранных языков - WexLang.com"
-
+    "If translation stopped working you can wait some time for google to unban your IP or switch to official google translate API, set you API key and translate without any limits.":
+    "Если перевод перестал работать вы можете подождать пока google вас разбанит или начать использовать официальный google translate API, установить ваш API ключ и переводить без ограничений."
 }
